--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,11 @@ export(cleanNet)
 export(drawNet)
 export(extractFuns)
 export(node)
+export(prepareAssignment)
+export(runBatch)
 export(runEval)
+export(runSingle)
+import(crayon)
 import(evaluate)
 import(igraph)
 import(tidyr)
